# r2d2-mongodb

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: connstring.rs  lib.rs
