[package]
authors = ["Peter Majchrak <petoknm@gmail.com>"]
name = "r2d2-mongodb"
version = "0.2.3"
description = "A MongoDB adaptor for r2d2 connection pool"
license = "GPL-3.0"
keywords = ["r2d2", "database", "mongo", "mongodb", "pool"]
readme = "README.md"
repository = "https://gitlab.com/petoknm/r2d2-mongodb"

[dependencies]
mongodb = { version="0.9" }
r2d2 = "0.8"
rand = "0.7"
urlencoding = "1.0"
